# eggtools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
eggtools/: AttributeDefs.py  EggMan.py  EggManConfig.py
eggtools/attributes/: EggAlphaAttribute.py  EggAttribute.py  EggBackfaceAttribute.py  EggBackstageAttribute.py  EggBillboardAttribute.py  EggBlendModeAttribute.py  EggCollideAttribute.py  EggCollideMaskAttribute.py  EggDCSAttribute.py  EggDartAttribute.py  EggDepthTestAttribute.py  EggDepthWriteAttribute.py  EggExtFileAttribute.py  EggFPSAttribute.py  EggIndexAttribute.py  EggPointLightAttribute.py  EggPolylightAttribute.py  EggPortalAttribute.py  EggSequenceAttribute.py  EggTriangulateAttribute.py  EggVisibilityAttribute.py  __init__.py
eggtools/components/: EggContext.py  EggDataContext.py  EggEnums.py  EggExceptions.py
eggtools/components/images/: ImageFill.py  ImageMarginer.py  ImageReference.py  ImageUtils.py  MarginMode.py
eggtools/components/points/: PointData.py  PointUtils.py
eggtools/scripts/: EggPrepper.py  UVNameRemover.py
eggtools/utils/: EggDepalettizer.py  EggMaintenanceUtil.py  EggNameResolver.py  EggUVPlotter.py  ImageUtils.py  MarginCalculator.py
examples/utils/: EggDepalettizer.py  EggUVPlotter.py  __init__.py
tests/: test_attrs.py  test_custom_egg_attrs.py  test_egg_image_crop.py  test_exceptions.py  test_image_fill.py  test_image_margining.py  test_margin_calculator.py  test_pointdata.py  test_replace_eggdata.py  test_util_depalettizer.py
tests/models/: test_grid_1.egg
