[tool.poetry]
name = "panda3d-eggtools"
version = "3.0.0"
description = "Library of utilities catered towards managing Panda3D egg files."

authors = ["Corporate Clash"]
maintainers = ["Loonatic"]
repository = "https://github.com/loonaticx/eggtools"
keywords = [
    "panda3d"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
python = ">=3.8,<4.0"
panda3d = "^1.10.14"
ordered_set = "^4.1.0"

[tool.poetry.group.image_processing.dependencies]
numpy = "1.23.5"
Pillow = "10.4.0"
opencv-python = "*"

[tool.poetry.extras]
plotting = ["matplotlib"]
[tool.ruff]
extend-exclude = [
    "tests/*",
    "examples/*"
]

[tool.ruff.lint]
ignore = [
    # Ignore wildcard imports
    "F405",
    "F403"
]

[tool.ruff.lint.per-file-ignores]
# Ignore imported but unused
"eggtools/attributes/__init__.py" = [
    "F401",
]
"eggtools/AttributeDefs.py" = [
    "F401",
]

# Ignore module levels not on top of the file
"eggtools/components/EggEnums.py" = [
    "E402",
]
